project alignment issue resolved

--- a/style.css
+++ b/style.css
@@ -386,7 +386,6 @@ article .icon {
 /* PROJECTS SECTION */
 
 #projects {
-  margin: 10rem;
   position: relative;
 }
 
